--- a/notebooks/ecommerce_behaviour/_2.3_ecom_data_prep_outliers_v2_dummyfication.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.3_ecom_data_prep_outliers_v2_dummyfication.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_functions lodaded\n"
+      "dslabs_functions lodaded\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "2839    -0.998    -0.068   -0.638   -0.770  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
        "KNN         -0.006174 -0.001763 -0.002993  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
     "    # apply winning strategy\n",
     "    data_save=apply_strategy_1(data_save,summary5)\n",
     "        \n",
-    "    data_save.to_csv(f\"dataset/df_ecom_2_3_outlier_input_v2_dummyfication.csv\", index=False)\n",
+    "    data_save.to_csv(f\"dataset/df_ecom_2_3_outliers_input_v2_dummyfication.csv\", index=False)\n",
     "    \n",
     "    print(data_save.columns)"
    ]
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1488,10 +1488,10 @@
     "\n",
     "    train, test = split_data_save_csv(pd.DataFrame(X, columns=data_save_copy.columns), y, data_columns=data_save_copy.columns, target_column=target)  \n",
     "    \n",
-    "    train.to_csv(f\"dataset/df_ecom_2_3_outliers_input_train.csv\", index=False)\n",
+    "    train.to_csv(f\"dataset/df_ecom_2_3_outliers_input_v2_dummyfication_train.csv\", index=False)\n",
     "    print(train.columns)\n",
     "    \n",
-    "    test.to_csv(f\"dataset/df_ecom_2_3_outliers_input_test.csv\", index=False)\n",
+    "    test.to_csv(f\"dataset/df_ecom_2_3_outliers_input_v2_dummyfication_test.csv\", index=False)\n",
     "    print(test.columns)"
    ]
   },
