--- a/notebooks/ecommerce_behaviour/_2.4_ecom_data_prep_scaling_v2_dummyfication.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.4_ecom_data_prep_scaling_v2_dummyfication.ipynb
@@ -993,7 +993,7 @@
     "     - Something is wrong with the datset or with our procedure steps\n",
     "\n",
     "Comparing with previous dataset:\n",
-    "- It's way better. For now lets save the approach 2 has the best. In balancing lets use the method for the outliers dataset\n",
+    "- For now lets save the approach 2 has the best. In balancing lets use the method for the outliers dataset\n",
     "\n",
     "\n",
     "Decision:\n",
