added dt, nn, gb, rf to evaluate

--- a/notebooks/google_merch_store/6_ga4_merch_feature_eng.ipynb
+++ b/notebooks/google_merch_store/6_ga4_merch_feature_eng.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "[8 rows x 40 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,49 +1022,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variance threshold: 0.024, Remaining features: 40\n",
-      "Variables to drop: ['event_name', 'device_mobile_brand_name']\n",
-      "columns to drop: ['event_name', 'device_mobile_brand_name']\n",
-      "Remaining columns: Index(['device_category', 'device_mobile_model_name',\n",
-      "       'device_operating_system', 'device_operating_system_version',\n",
-      "       'device_language', 'device_web_info_browser',\n",
-      "       'device_web_info_browser_version', 'geo_region', 'geo_city',\n",
-      "       'traffic_source_medium', 'traffic_source_source',\n",
-      "       'engagement_time_msec', 'month', 'day_of_year', 'week_number',\n",
-      "       'page_path_level_1', 'page_path_level_2', 'page_path_level_3',\n",
-      "       'path_length', 'time_of_day_sin', 'time_of_day_cos', 'local_hour_sin',\n",
-      "       'local_hour_cos', 'local_minute_sin', 'local_minute_cos',\n",
-      "       'hour_minute_fraction_sin', 'hour_minute_fraction_cos', 'day_sin',\n",
-      "       'day_cos', 'day_of_week_nr_sin', 'day_of_week_nr_cos',\n",
-      "       'week_of_month_nr_sin', 'week_of_month_nr_cos', 'geo_country',\n",
-      "       'session_engaged', 'year', 'quarter', 'is_weekend', 'domain',\n",
-      "       'returning_user'],\n",
-      "      dtype='object')\n",
-      "Index(['device_category', 'device_mobile_model_name',\n",
-      "       'device_operating_system', 'device_operating_system_version',\n",
-      "       'device_language', 'device_web_info_browser',\n",
-      "       'device_web_info_browser_version', 'geo_region', 'geo_city',\n",
-      "       'traffic_source_medium', 'traffic_source_source',\n",
-      "       'engagement_time_msec', 'month', 'day_of_year', 'week_number',\n",
-      "       'page_path_level_1', 'page_path_level_2', 'page_path_level_3',\n",
-      "       'path_length', 'time_of_day_sin', 'time_of_day_cos', 'local_hour_sin',\n",
-      "       'local_hour_cos', 'local_minute_sin', 'local_minute_cos',\n",
-      "       'hour_minute_fraction_sin', 'hour_minute_fraction_cos', 'day_sin',\n",
-      "       'day_cos', 'day_of_week_nr_sin', 'day_of_week_nr_cos',\n",
-      "       'week_of_month_nr_sin', 'week_of_month_nr_cos', 'geo_country',\n",
-      "       'session_engaged', 'year', 'quarter', 'is_weekend', 'domain',\n",
-      "       'returning_user'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if test_data==False:\n",
     "    \n",
@@ -1089,57 +1049,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Labels=[0.0, 1.0]\n",
-      "Index(['device_category', 'device_mobile_model_name',\n",
-      "       'device_operating_system', 'device_operating_system_version',\n",
-      "       'device_language', 'device_web_info_browser',\n",
-      "       'device_web_info_browser_version', 'geo_region', 'geo_city',\n",
-      "       'traffic_source_medium', 'traffic_source_source',\n",
-      "       'engagement_time_msec', 'month', 'day_of_year', 'week_number',\n",
-      "       'page_path_level_1', 'page_path_level_2', 'page_path_level_3',\n",
-      "       'path_length', 'time_of_day_sin', 'time_of_day_cos', 'local_hour_sin',\n",
-      "       'local_hour_cos', 'local_minute_sin', 'local_minute_cos',\n",
-      "       'hour_minute_fraction_sin', 'hour_minute_fraction_cos', 'day_sin',\n",
-      "       'day_cos', 'day_of_week_nr_sin', 'day_of_week_nr_cos',\n",
-      "       'week_of_month_nr_sin', 'week_of_month_nr_cos', 'geo_country',\n",
-      "       'session_engaged', 'year', 'quarter', 'is_weekend', 'domain',\n",
-      "       'returning_user'],\n",
-      "      dtype='object')\n",
-      "Index(['device_category', 'device_mobile_model_name',\n",
-      "       'device_operating_system', 'device_operating_system_version',\n",
-      "       'device_language', 'device_web_info_browser',\n",
-      "       'device_web_info_browser_version', 'geo_region', 'geo_city',\n",
-      "       'traffic_source_medium', 'traffic_source_source',\n",
-      "       'engagement_time_msec', 'month', 'day_of_year', 'week_number',\n",
-      "       'page_path_level_1', 'page_path_level_2', 'page_path_level_3',\n",
-      "       'path_length', 'time_of_day_sin', 'time_of_day_cos', 'local_hour_sin',\n",
-      "       'local_hour_cos', 'local_minute_sin', 'local_minute_cos',\n",
-      "       'hour_minute_fraction_sin', 'hour_minute_fraction_cos', 'day_sin',\n",
-      "       'day_cos', 'day_of_week_nr_sin', 'day_of_week_nr_cos',\n",
-      "       'week_of_month_nr_sin', 'week_of_month_nr_cos', 'geo_country',\n",
-      "       'session_engaged', 'year', 'quarter', 'is_weekend', 'domain',\n",
-      "       'returning_user'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if test_data==False:\n",
     "    \n",
     "\n",
-    "    data_save_copy=data_save.copy()\n",
+    "    # data_save_copy=data_save.copy() \n",
+    "    # y, X, labels, class_counts = define_target_and_prepare_data(data_save_copy, target=target)\n",
+    "    # train, test = split_data_save_csv(pd.DataFrame(X, columns=data_save_copy.columns), y, data_columns=data_save_copy.columns, target_column=target)  \n",
     "\n",
     "    \n",
-    "    y, X, labels, class_counts = define_target_and_prepare_data(data_save_copy, target=target)\n",
-    "\n",
-    "    train, test = split_data_save_csv(pd.DataFrame(X, columns=data_save_copy.columns), y, data_columns=data_save_copy.columns, target_column=target)  \n",
+    "    train,test=simple_split_df(data_save,sort_by='day_of_year')\n",
     "    \n",
     "    train.to_csv(f\"data/df_merch_6_feat_eng_input_train.csv\", index=False)\n",
     "    print(train.columns)\n",
