--- a/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
+++ b/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "\n",
     "filepath=r'data/df_merch_6_feat_eng_input'\n",
-    "\n",
+    "test_filepath= f\"{filepath}_test.csv\"\n",
+    "train_filepath= f\"{filepath}_train.csv\"\n",
     "\n",
     "file_tag = \"df_merch_balancing_input\""
    ]
@@ -131,8 +132,8 @@
    ],
    "source": [
     "\n",
-    "# test_data=True\n",
-    "test_data=False\n",
+    "test_data=True\n",
+    "# test_data=False\n",
     "\n",
     "# use to evaluate strategies. otherwise False to just transform data \n",
     "evaluate=True\n",
@@ -143,22 +144,19 @@
     "\n",
     "    data=pd.read_csv(f\"{filepath}.csv\")\n",
     "    \n",
-    "    test= pd.read_csv(f\"{filepath}_test.csv\")\n",
-    "    train= pd.read_csv(f\"{filepath}_train.csv\")\n",
+    "    test= pd.read_csv(test_filepath)\n",
+    "    train= pd.read_csv(train_filepath)\n",
     "\n",
     "    # sample\n",
     "    data=data.sample(frac=0.05, replace=False)\n",
     "    test=test.sample(frac=0.05, replace=False)\n",
     "    train=train.sample(frac=0.05, replace=False)\n",
     "    \n",
-    "    # create sample df version of test/train for variance studies\n",
-    "    test_sample= test\n",
-    "    train_sample= train\n",
     "    \n",
     "else:\n",
     "    data=pd.read_csv(f\"{filepath}.csv\")  \n",
-    "    test= pd.read_csv(f\"{filepath}_test.csv\")\n",
-    "    train= pd.read_csv(f\"{filepath}_train.csv\")\n",
+    "    test= pd.read_csv(test_filepath)\n",
+    "    train= pd.read_csv(train_filepath)\n",
     "\n",
     "\n",
     "\n",
@@ -354,7 +352,7 @@
     "    return df_balanced\n",
     "\n",
     "\n",
-    "data_1=apply_strategy_1(train)\n",
+    "train_1=apply_strategy_1(train)\n",
     "test_1=test.copy()\n",
     "\n"
    ]
@@ -383,35 +381,36 @@
     }
    ],
    "source": [
-    "from pandas import concat\n",
-    "from matplotlib.pyplot import figure, show\n",
-    "from dslabs_functions import plot_multibar_chart\n",
+    "if evaluate==True:\n",
+    "    from pandas import concat\n",
+    "    from matplotlib.pyplot import figure, show\n",
+    "    from dslabs_functions import plot_multibar_chart\n",
     "\n",
     "\n",
-    "# Distribution check\n",
+    "    # Distribution check\n",
     "\n",
     "\n",
-    "# Create a dictionary to store original class counts\n",
-    "values: dict[str, list[int]] = {\n",
-    "    \"Original\": [\n",
-    "        len(data[data[target] == 0]),  # Assuming 0 is the negative class\n",
-    "        len(data[data[target] == 1]),  # Assuming 1 is the positive class\n",
+    "    # Create a dictionary to store original class counts\n",
+    "    values: dict[str, list[int]] = {\n",
+    "        \"Original\": [\n",
+    "            len(data[data[target] == 0]),  # Assuming 0 is the negative class\n",
+    "            len(data[data[target] == 1]),  # Assuming 1 is the positive class\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    values[\"Train\"] = [\n",
+    "        len(train_1[train_1[target] == 0]),\n",
+    "        len(train_1[train_1[target] == 1]),\n",
     "    ]\n",
-    "}\n",
+    "    values[\"Test\"] = [\n",
+    "        len(test_1[test_1[target] == 0]),\n",
+    "        len(test_1[test_1[target] == 1]),\n",
+    "    ]\n",
     "\n",
-    "values[\"Train\"] = [\n",
-    "    len(data_1[data_1[target] == 0]),\n",
-    "    len(data_1[data_1[target] == 1]),\n",
-    "]\n",
-    "values[\"Test\"] = [\n",
-    "    len(test_1[test_1[target] == 0]),\n",
-    "    len(test_1[test_1[target] == 1]),\n",
-    "]\n",
-    "\n",
-    "# Visualize the distribution\n",
-    "figure(figsize=(6, 4))\n",
-    "plot_multibar_chart(labels, values, title=\"Data distribution per dataset\")\n",
-    "show()"
+    "    # Visualize the distribution\n",
+    "    figure(figsize=(6, 4))\n",
+    "    plot_multibar_chart(labels, values, title=\"Data distribution per dataset\")\n",
+    "    show()"
    ]
   },
   {
@@ -441,56 +440,23 @@
     "# evaluate_approach is in data_functions originally from DSLABS/ Data Prep / Methodology\n",
     "# removed Multinomial from run_NB function because dataset has negative values\n",
     "\n",
-    "figure()\n",
-    "eval_1: dict[str, list] = evaluate_approach(data_1, test_1, target='returning_user', metric=\"recall\")\n",
-    "plot_multibar_chart(\n",
-    "    [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag}_approach_1_evaluation\", percentage=True\n",
-    ")\n",
-    "savefig(f\"images/{file_tag}_approach_1_evaluation.png\")\n",
-    "show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['device_category', 'device_mobile_model_name',\n",
-       "       'device_operating_system', 'device_operating_system_version',\n",
-       "       'device_language', 'device_web_info_browser',\n",
-       "       'device_web_info_browser_version', 'geo_region', 'geo_city',\n",
-       "       'traffic_source_medium', 'traffic_source_source',\n",
-       "       'engagement_time_msec', 'month', 'day_of_year', 'week_number',\n",
-       "       'page_path_level_1', 'page_path_level_2', 'page_path_level_3',\n",
-       "       'path_length', 'time_of_day_sin', 'time_of_day_cos', 'local_hour_sin',\n",
-       "       'local_hour_cos', 'local_minute_sin', 'local_minute_cos',\n",
-       "       'hour_minute_fraction_sin', 'hour_minute_fraction_cos', 'day_sin',\n",
-       "       'day_cos', 'day_of_week_nr_sin', 'day_of_week_nr_cos',\n",
-       "       'week_of_month_nr_sin', 'week_of_month_nr_cos', 'geo_country',\n",
-       "       'session_engaged', 'year', 'quarter', 'is_weekend', 'domain',\n",
-       "       'returning_user'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.columns"
+    "if evaluate==True:\n",
+    "    figure()\n",
+    "    eval_1: dict[str, list] = evaluate_approach(train_1, test_1, target='returning_user', metric=\"recall\")\n",
+    "    plot_multibar_chart(\n",
+    "        [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag}_approach_1_evaluation\", percentage=True\n",
+    "    )\n",
+    "    savefig(f\"images/{file_tag}_approach_1_evaluation.png\")\n",
+    "    show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bal 2 - Hybrid\n",
+    "# Bal 2 - Hybrid Sampling\n",
     "\n",
-    "Reduce from negative class from 75 to 60% and then upsample the positives into 50/50\n"
+    "Reduce from negative class from 75 to 60% and then oversample the positives into 50/50\n"
    ]
   },
   {
@@ -525,9 +491,7 @@
     }
    ],
    "source": [
-    "from numpy import ndarray\n",
-    "from pandas import Series\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
     "\n",
     "def apply_strategy_2(df):\n",
     "\n",
@@ -572,7 +536,7 @@
     "    return df_balanced\n",
     "\n",
     "\n",
-    "data_2=apply_strategy_2(train)\n",
+    "train_2=apply_strategy_2(train)\n",
     "test_2=test.copy()\n"
    ]
   },
@@ -582,6 +546,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from numpy import ndarray\n",
+    "# from pandas import Series\n",
+    "# from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "\n",
     "# SMOTE DRAFT   \n",
     "# \n",
     "# # Copy the DataFrame\n",
@@ -645,35 +614,37 @@
     }
    ],
    "source": [
-    "from pandas import concat\n",
-    "from matplotlib.pyplot import figure, show\n",
-    "from dslabs_functions import plot_multibar_chart\n",
+    "if evaluate==True:\n",
+    "\n",
+    "    from pandas import concat\n",
+    "    from matplotlib.pyplot import figure, show\n",
+    "    from dslabs_functions import plot_multibar_chart\n",
     "\n",
     "\n",
-    "# Distribution check\n",
+    "    # Distribution check\n",
     "\n",
     "\n",
-    "# Create a dictionary to store original class counts\n",
-    "values: dict[str, list[int]] = {\n",
-    "    \"Original\": [\n",
-    "        len(data[data[target] == 0]),  # Assuming 0 is the negative class\n",
-    "        len(data[data[target] == 1]),  # Assuming 1 is the positive class\n",
+    "    # Create a dictionary to store original class counts\n",
+    "    values: dict[str, list[int]] = {\n",
+    "        \"Original\": [\n",
+    "            len(data[data[target] == 0]),  # Assuming 0 is the negative class\n",
+    "            len(data[data[target] == 1]),  # Assuming 1 is the positive class\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    values[\"Train\"] = [\n",
+    "        len(train_2[train_2[target] == 0]),\n",
+    "        len(train_2[train_2[target] == 1]),\n",
     "    ]\n",
-    "}\n",
+    "    values[\"Test\"] = [\n",
+    "        len(test_2[test_2[target] == 0]),\n",
+    "        len(test_2[test_2[target] == 1]),\n",
+    "    ]\n",
     "\n",
-    "values[\"Train\"] = [\n",
-    "    len(data_2[data_2[target] == 0]),\n",
-    "    len(data_2[data_2[target] == 1]),\n",
-    "]\n",
-    "values[\"Test\"] = [\n",
-    "    len(test_2[test_2[target] == 0]),\n",
-    "    len(test_2[test_2[target] == 1]),\n",
-    "]\n",
-    "\n",
-    "# Visualize the distribution\n",
-    "figure(figsize=(6, 4))\n",
-    "plot_multibar_chart(labels, values, title=\"Data distribution per dataset\")\n",
-    "show()"
+    "    # Visualize the distribution\n",
+    "    figure(figsize=(6, 4))\n",
+    "    plot_multibar_chart(labels, values, title=\"Data distribution per dataset\")\n",
+    "    show()"
    ]
   },
   {
@@ -700,14 +671,14 @@
     }
    ],
    "source": [
-    "\n",
-    "figure()\n",
-    "eval_2: dict[str, list] = evaluate_approach(data_2, test_2, target='returning_user', metric=\"recall\")\n",
-    "plot_multibar_chart(\n",
-    "    [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_approach_2_evaluation\", percentage=True\n",
-    ")\n",
-    "savefig(f\"images/{file_tag}_approach_2_evaluation.png\")\n",
-    "show()"
+    "if evaluate == True:\n",
+    "    figure()\n",
+    "    eval_2: dict[str, list] = evaluate_approach(train_2, test_2, target='returning_user', metric=\"recall\")\n",
+    "    plot_multibar_chart(\n",
+    "        [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_approach_2_evaluation\", percentage=True\n",
+    "    )\n",
+    "    savefig(f\"images/{file_tag}_approach_2_evaluation.png\")\n",
+    "    show()"
    ]
   },
   {
@@ -863,8 +834,7 @@
    "metadata": {},
    "source": [
     "# Analysis\n",
-    "\n",
-    "- Uplift between balancing input approaches is specially significant when it comes to recall (55.7%  out1 to 37% out2). \n"
+    "\n"
    ]
   },
   {
@@ -915,11 +885,8 @@
    ],
    "source": [
     "if test_data==False:\n",
-    "    \n",
-    "    \n",
-    "    data_save=data.copy()\n",
-    "\n",
-    "    data_save=apply_strategy_1(data_save)\n",
+    "      \n",
+    "    data_save=apply_strategy_1(data)\n",
     "        \n",
     "    data_save.to_csv(f\"data/df_merch_7_bal_input.csv\", index=False)\n",
     "\n",
@@ -979,11 +946,7 @@
    ],
    "source": [
     "if test_data==False:\n",
-    "    \n",
-    "\n",
-    "    data_save_copy=data_save.copy()\n",
-    "\n",
-    "    \n",
+    "       \n",
     "    train_save,test_save=simple_split_df(data_save,sort_by='day_of_year')\n",
     "    \n",
     "    train_save.to_csv(f\"data/df_merch_7_bal_input_train.csv\", index=False)\n",
