updated notebook and images

--- a/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
+++ b/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,19 +184,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 24\u001b[0m\n\u001b[1;32m     20\u001b[0m     df_zscore[target] \u001b[38;5;241m=\u001b[39m target_data\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df_zscore\n\u001b[0;32m---> 24\u001b[0m data_1\u001b[38;5;241m=\u001b[39mapply_strategy_1(data)\n\u001b[1;32m     28\u001b[0m data_1\u001b[38;5;241m.\u001b[39mcolumns\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['event_name', 'device_category', 'device_mobile_brand_name',\n",
+       "       'device_mobile_model_name', 'device_operating_system',\n",
+       "       'device_operating_system_version', 'device_language',\n",
+       "       'device_web_info_browser', 'device_web_info_browser_version',\n",
+       "       'geo_region', 'geo_city', 'traffic_source_medium',\n",
+       "       'traffic_source_source', 'engagement_time_msec', 'month', 'day_of_year',\n",
+       "       'week_number', 'page_path_level_1', 'page_path_level_2',\n",
+       "       'page_path_level_3', 'path_length', 'time_of_day_sin',\n",
+       "       'time_of_day_cos', 'local_hour_sin', 'local_hour_cos',\n",
+       "       'local_minute_sin', 'local_minute_cos', 'hour_minute_fraction_sin',\n",
+       "       'hour_minute_fraction_cos', 'day_sin', 'day_cos', 'day_of_week_nr_sin',\n",
+       "       'day_of_week_nr_cos', 'week_of_month_nr_sin', 'week_of_month_nr_cos',\n",
+       "       'geo_country', 'session_engaged', 'year', 'quarter', 'is_weekend',\n",
+       "       'domain', 'returning_user'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -874,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
