updated evaluation and balancing

--- a/notebooks/google_merch_store/12_ga4_merch_eval_RForests.ipynb
+++ b/notebooks/google_merch_store/12_ga4_merch_eval_RForests.ipynb
@@ -321,7 +321,7 @@
     "    metric=eval_metric,\n",
     "    )\n",
     "    \n",
-    "    savefig(f'images/{file_tag}_dt_{eval_metric}_study.png')\n",
+    "    savefig(f'images/{file_tag}_rf_{eval_metric}_study.png')\n",
     "    show()\n",
     "    "
    ]
@@ -364,7 +364,7 @@
     "    prd_tst: array = best_model.predict(tstX)\n",
     "    figure()\n",
     "    plot_evaluation_results(params, trnY, prd_trn, tstY, prd_tst, labels)\n",
-    "    savefig(f'images/{file_tag}_dt_{params[\"name\"]}_best_{params[\"metric\"]}_eval.png')\n",
+    "    savefig(f'images/{file_tag}_rf_{params[\"name\"]}_best_{params[\"metric\"]}_eval.png')\n",
     "    show()"
    ]
   },
