--- a/notebooks/ecommerce_behaviour/_2.1_ecom_data_prep_enconding_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.1_ecom_data_prep_enconding_vcleaned.ipynb
@@ -44,17 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#get file from data pre processing notebook. This file has all the column we need to start the data profiling phase\n",
-    "filepath = r'dataset/df_ecom_profiling_v2.csv'\n",
+    "filepath = r'dataset/df_ecom_profiling_vcleaned.csv'\n",
     "\n",
-    "excel_mapping_filepath=r'dataset/df_ecom_values_encoded_v2.xlsx'\n",
+    "excel_mapping_filepath=r'dataset/df_ecom_values_encoded_vcleaned.xlsx'\n",
     "\n",
-    "file_tag = 'df_ecom_profiling'"
+    "file_tag = 'df_ecom_encoded'"
    ]
   },
   {
