updated full data prep script. adjusted target class to session number>2

--- a/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
+++ b/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
@@ -134,8 +134,8 @@
    ],
    "source": [
     "\n",
-    "# test_data=True\n",
-    "test_data=False\n",
+    "test_data=True\n",
+    "# test_data=False\n",
     "\n",
     "# use to evaluate strategies. otherwise False to just transform data \n",
     "evaluate=True\n",
@@ -150,7 +150,7 @@
     "    train= pd.read_csv(train_filepath)\n",
     "\n",
     "    # sample\n",
-    "    sample=0.10\n",
+    "    sample=0.05\n",
     "    data = data.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    test = test.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    train = train.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
@@ -320,37 +320,11 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "\n",
-    "\n",
     "def apply_strategy_1(df: DataFrame) -> DataFrame:\n",
     "\n",
     "    df_copy=df.copy()\n",
     "\n",
-    "    # this script is available in data_functions originally from DSLabs site in Outlier chapter\n",
-    "\n",
-    "    # Ensure positive_class and negative_class are defined and match the target values\n",
-    "    positive_class = 1  # Or whatever your positive class value is\n",
-    "    negative_class = 0  # Or whatever your negative class value is\n",
-    "\n",
-    "    # Separate the majority and minority classes\n",
-    "    df_majority = df_copy[df_copy[target] == negative_class]\n",
-    "    df_minority = df_copy[df_copy[target] == positive_class]\n",
-    "\n",
-    "    # Check the class distribution\n",
-    "    print(f\"Original class distribution:\\n{df_copy[target].value_counts(normalize=True) * 100}\\n\")\n",
-    "\n",
-    "    # Downsample the majority class to match the size of the minority class\n",
-    "    df_majority_downsampled = df_majority.sample(n=len(df_minority), random_state=42)\n",
-    "\n",
-    "    # Combine the downsampled majority class with the minority class\n",
-    "    df_balanced = pd.concat([df_majority_downsampled, df_minority])\n",
-    "\n",
-    "    # sort  the combined dataset\n",
-    "    df_balanced.sort_values(by='day_of_year', inplace=True)\n",
-    "    \n",
-    "\n",
-    "    # Check the new class distribution to verify the balance\n",
-    "    print(f\"Balanced class distribution:\\n{df_balanced[target].value_counts(normalize=True) * 100}\\n\")\n",
-    "\n",
+    "    df_balanced=apply_balanced_downsampling(df_copy)\n",
     "    \n",
     "    return df_balanced\n",
     "\n",
@@ -500,49 +474,7 @@
     "    # Create a copy of the dataframe\n",
     "    df_copy = df.copy()\n",
     "\n",
-    "    # Define positive and negative classes\n",
-    "    positive_class = 1  # Modify as per your positive class value\n",
-    "    negative_class = 0  # Modify as per your negative class value\n",
-    "\n",
-    "    # Separate the majority and minority classes\n",
-    "    df_majority = df_copy[df_copy[target] == negative_class]\n",
-    "    df_minority = df_copy[df_copy[target] == positive_class]\n",
-    "\n",
-    "    # Check the current class distribution\n",
-    "    print(f\"Original class distribution:\\n{df_copy[target].value_counts(normalize=True) * 100}\\n\")\n",
-    "\n",
-    "    # Sort by 'day_of_year' (or another time-related feature) to ensure the data is split based on time\n",
-    "    df_majority.sort_values(by='day_of_year', inplace=True)\n",
-    "    df_minority.sort_values(by='day_of_year', inplace=True)\n",
-    "\n",
-    "    # Determine the desired size for the final dataset\n",
-    "    total_majority_samples = len(df_majority)\n",
-    "    total_minority_samples = len(df_minority)\n",
-    "    \n",
-    "    # Set the ratio for the majority and minority classes (60/40 split)\n",
-    "    desired_majority_ratio = 0.60\n",
-    "    desired_minority_ratio = 0.40\n",
-    "\n",
-    "    # Calculate the new majority size (60% of the total number of majority samples)\n",
-    "    downsampled_majority_size = int(desired_majority_ratio * total_majority_samples)\n",
-    "\n",
-    "    # Calculate the corresponding upsampled minority size (40% of the downsampled majority size)\n",
-    "    upsampled_minority_size = int(downsampled_majority_size * (desired_minority_ratio / desired_majority_ratio))\n",
-    "    \n",
-    "    # Downsample the majority class (keeping the older data based on 'day_of_year')\n",
-    "    df_majority_downsampled = df_majority.head(downsampled_majority_size)\n",
-    "\n",
-    "    # Upsample the minority class to match the desired minority size for a 60/40 split\n",
-    "    df_minority_upsampled = df_minority.sample(n=upsampled_minority_size, replace=True)\n",
-    "\n",
-    "    # Combine the downsampled majority and upsampled minority classes\n",
-    "    df_balanced = pd.concat([df_majority_downsampled, df_minority_upsampled])\n",
-    "\n",
-    "    # Sort the dataset by 'day_of_year' again if needed\n",
-    "    df_balanced.sort_values(by='day_of_year', inplace=True)\n",
-    "\n",
-    "    # Check the new class distribution\n",
-    "    print(f\"Hybrid class distribution ({desired_majority_ratio*100}/{desired_minority_ratio*100}):\\n{df_balanced[target].value_counts(normalize=True) * 100}\\n\")\n",
+    "    df_balanced=apply_balanced_hybrid(df_copy,target='returning_user',minority_ratio=0.5)\n",
     "\n",
     "    return df_balanced\n",
     "\n",
@@ -676,29 +608,10 @@
     "\n",
     "def apply_strategy_3(df):\n",
     "\n",
-    "    from imblearn.over_sampling import SMOTE\n",
-    "\n",
     "    # Create a copy of the dataframe\n",
     "    df_copy = df.copy()\n",
     "\n",
-    "    print(f\"Original class distribution:\\n{df_copy[target].value_counts(normalize=True) * 100}\\n\")\n",
-    "\n",
-    "\n",
-    "    # Separate the features (X) and the target (y)\n",
-    "    X = df_copy.drop(columns=[target])\n",
-    "    y = df_copy[target]\n",
-    "\n",
-    "    # Apply SMOTE to balance the data\n",
-    "    smote = SMOTE(random_state=42)\n",
-    "    X_res, y_res = smote.fit_resample(X, y)\n",
-    "\n",
-    "    # Recombine the features and target into a single dataframe\n",
-    "    df_smote = pd.concat([pd.DataFrame(X_res, columns=X.columns), pd.DataFrame(y_res, columns=[target])], axis=1)\n",
-    "\n",
-    "    # Sort the dataset by 'day_of_year' again if needed\n",
-    "    df_smote.sort_values(by='day_of_year', inplace=True)\n",
-    "\n",
-    "    print(f\"New class distribution:\\n{df_smote[target].value_counts(normalize=True) * 100}\\n\")\n",
+    "    df_smote=apply_balanced_smote(df_copy)\n",
     "\n",
     "\n",
     "    return df_smote\n",
